
   * Committing a change which is not a merge and does not change the number of
     files in the tree is faster by utilising the data about whether files are
     changed to determine if the tree is unchanged rather than recalculating
     it at the end of the commit process. (Robert Collins)

   * Inventory serialisation no longer double-sha's the content.
     (Robert Collins)

   * Pack indices are now partially parsed for specific key lookup using a
     bisection approach. (Robert Collins)

   * Partial commits are now approximately 40% faster by walking over the
     unselected current tree more efficiently. (Robert Collins)

   * XML inventory serialisation takes 20% less time while being stricter about
     the contents. (Robert Collins)

  IMPROVEMENTS:

   * ``bzr+https://`` smart server across https now supported. 
     (John Ferlito, Martin Pool, #128456)

   * Mutt is now a supported mail client; set ``mail_client=mutt`` in your
     bazaar.conf and ``send`` will use mutt. (Keir Mierle)

   * New option ``-c``/``--change`` for ``merge`` command for cherrypicking 
     changes from one revision. (Alexander Belchenko, #141368)

   * Show encodings, locale and list of plugins in the traceback message.
     (Martin Pool, #63894)


  DOCUMENTATION:

   * New *Bazaar in Five Minutes* guide.  (Matthew Revell)

  BUG FIXES:

   * Fix a problem with Win32 handling of the executable bit.
     (John Arbash Meinel, #149113)

   * ``bzr+ssh://`` and ``sftp://`` URLs that do not specify ports explicitly
     no longer assume that means port 22.  This allows people using OpenSSH to
     override the default port in their ``~/.ssh/config`` if they wish.  This
     fixes a bug introduced in bzr 0.91.  (Andrew Bennetts, #146715)

   * Commands reporting exceptions can now be profiled and still have their
     data correctly dumped to a file. For example, a ``bzr commit`` with
     no changes still reports the operation as pointless but doing so no